修改一些文案

--- a/src/main/resources/templates/themes/default/partial/footer.html
+++ b/src/main/resources/templates/themes/default/partial/footer.html
@@ -17,12 +17,12 @@
             </div>
             <div class="meta-item meta-copyright">
                 <div class="meta-copyright-info">
-                    <a href="http://yc-yue.top" class="info-logo">
+                    <a href="https://yc-yue.top" class="info-logo">
 <!--                        <img src="/templates/themes/default/static/img/logo.png" alt="${site_title()}">-->
                         程序员的博客网站
                     </a>
                     <div class="info-text">
-                        <p>技术自留地</p>
+                        <p>技术试验田</p>
                         <p>Powered by <a href="http://ye-yue.top" target="_blank" rel="nofollow">最终解释权归我所有</a>
                         </p>
                         <p>ICP证 <a href="http://beian.miit.gov.cn">豫ICP备2020032137号-1</a></p>
