--- a/src/main/resources/templates/themes/default/partial/social.html
+++ b/src/main/resources/templates/themes/default/partial/social.html
@@ -1,18 +1,18 @@
 <div class="social-list">
     #if(not_empty(theme_option('social_weibo')))
-    <a class="social weibo" target="blank" href="http://weibo.com/${theme_option('social_weibo')}">微博</a>
+    <a class="social weibo" target="ChrisTBT" >公众号:ChrisTBT</a>
     #end
 
     #if(not_empty(theme_option('social_zhihu')))
     <a class="social zhihu" target="blank"
-       href="https://www.zhihu.com/people/${theme_option('social_zhihu')}">知乎</a>
+       href="https://www.zhihu.com/people/chris-yuan-17-89/posts">知乎</a>
     #end
 
-    <a class="social rss" target="blank" href="/feed">RSS</a>
+    #<a class="social rss" target="blank" href="/feed">RSS</a> #
 
     #if(not_empty(theme_option('social_github')))
     <a class="social github" target="blank"
-       href="https://github.com/${theme_option('social_github')}">Github</a>
+       href="https://github.com/Yuanlw">Github</a>
     #end
 
     #if(not_empty(theme_option('social_twitter')))
