修改一些文案

--- a/src/main/resources/templates/themes/default/partial/header.html
+++ b/src/main/resources/templates/themes/default/partial/header.html
@@ -36,7 +36,7 @@
 <![endif]-->
 <header id="header" class="header bg-white">
     <div class="navbar-container">
-        <a href="http://yc-yue.top" class="navbar-logo">
+        <a href="https://yc-yue.top" class="navbar-logo">
 <!--            #if(theme_option('logo_url') == "")-->
 <!--            <img src="${theme_url('/static/img/logo.png')}" alt="${site_title()}"/>-->
 <!--            #else-->
