--- a/src/main/resources/templates/themes/default/setting.html
+++ b/src/main/resources/templates/themes/default/setting.html
@@ -24,7 +24,7 @@
                     <label class="col-md-3 control-label">主题作者</label>
                     <div class="col-md-9">
                         <input type="text" class="form-control" name="author"
-                               value="${options.author ?! 'chris'}" placeholder="您的博客昵称">
+                               value="Chris" placeholder="您的博客昵称">
                     </div>
                 </div>
                 <div class="clearfix pull-right">
